--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -98,12 +98,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Germany    4.0\n",
+       "Italy      NaN\n",
+       "Japan      8.0\n",
+       "USA        2.0\n",
+       "USSR       NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1+s2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s3 = pd.Series(s=data)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
